Fix spacing on right side of PresetLutView and change buttons of cards for presets/luts that are unowned to have text 'Check it out' rather than a download icon

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -8,6 +8,12 @@
     box-sizing: border-box;
 }
 
+#dashboard h2 {
+    background-color: transparent;
+    padding: 0;
+    font-weight: 400;
+}
+
 #dashboard .mobile {
     display: none;
 }
