--- a/src/components/Dashboard/PresetLutView/PresetLutView.css
+++ b/src/components/Dashboard/PresetLutView/PresetLutView.css
@@ -8,6 +8,10 @@
     grid-template-columns: 1fr 35rem;
 }
 
+#preset-lut-view h3 {
+    font-weight: 400;
+}
+
 #preset-lut-view-left {
     overflow-x: hidden;
     display: flex;
@@ -33,6 +37,11 @@
     white-space: nowrap;
 }
 
+#user-unowned-presets-luts .preset-lut-card .preset-lut-card-image{
+    /* make card look faded since it is unowned */
+    opacity: 0.3;
+}
+
 .presets-luts-container {
     overflow-x: scroll;
     display: flex;
@@ -55,9 +64,57 @@
     padding: 10%;
 }
 
+#preset-lut-view-right h1 {
+    font-size: 2rem;
+    font-weight: 400;
+    margin-bottom: 0rem;
+}
+
+#preset-lut-view-right p {
+    margin-top: 0.5rem;
+    margin-bottom: 3rem;
+}
+
 .preset-lut-image-container {
     width: 100%;
     height: 300px;
     background-color: #777;
     border-radius: 30px;
+    margin-bottom: 3rem;
+    background-image: url("https://images.squarespace-cdn.com/content/v1/61a46cc601b4c521a42206d3/1645248050136-SZU0QNE11HSW5HMNKRIH/Night1-A.jpeg?format=1000w");
+    background-size: cover;
+    background-position: 50% 40%;
+}
+
+#preset-lut-size-info, #preset-lut-type-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+#preset-info {
+    margin-bottom: 3rem;
+}
+
+#preset-lut-view-right button {
+    padding: 0.5rem 1rem;
+    background-color: #f2f1f2;
+    border-radius: 10px;
+    transition: all 0.2s ease-in-out;
+}
+
+#preset-lut-view-right button:hover {
+    background-color: #e0e0e0;
+    color: white;
+}
+
+
+#preset-lut-view-right button pre {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 }
